# first_opengl_project

./: CMakeLists.txt  README.md  build.sh  imgui.ini
res/shaders/: basic.shader  batch.shader
src/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
src/tests/: Test.cpp  Test.h  TestBatchColor.cpp  TestBatchColor.h  TestBatchDynamic.cpp  TestBatchDynamic.h  TestBatchRendering2D.cpp  TestBatchRendering2D.h  TestBatchTexture.cpp  TestBatchTexture.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
